<resources>
    <string name="app_name">Flash Tennis</string>
    <string name="title_menu">Menu</string>
    <string name="title_historique">Historique</string>
    <string name="title_activity_maps">Map</string>
    <string name="take_photo">Take Photo</string>

    <string name="Fragment_Menu">Menu</string>
    <string name="Fragment_Reglage">Reglage</string>
    <string name="Fragment_Historique">Historique</string>

    <string name="BouttonNewMatch">Nouveau Match</string>
    <string name="BouttonNewLocation">Localiser</string>
    <string name="BouttonSuivantLocation">Suivant</string>
    <string name="BouttonSuivantPhoto">Suivant</string>
    <string name="BouttonJouer">Jouer</string>
    <string name="BouttonPrendrePhoto">Photo</string>

    <string name="TexteJoueur1">Joueur 1</string>
    <string name="TexteJoueur2">Joueur 2</string>
    <string name="TexteHasard">Hasard</string>
    <string name="TextePhoto">Photo</string>
    <string name="TextePrénom">Prénom</string>
    <string name="TexteNom">Nom</string>

    <string name="Point">Point</string>


</resources>
